--- a/index.html
+++ b/index.html
@@ -61,5 +61,5 @@
 			//go to " http://momentjs.com/timezone/ " to get timezone
 		});
 	</script>
-</body><!-- This template has been downloaded from Webrubik.com -->
+</body>
 </html>
